--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,8 @@ head
 body
   header
   h1 Welcome to the gallery!
+  each galleryData in galleries
+    img(src = galleryData.url)
+    p Uploaded by: #{galleryData.author}
 
 
