--- a/views/index.pug
+++ b/views/index.pug
@@ -9,5 +9,6 @@ body
   each galleryData in galleries
     img(src = galleryData.url)
     p Uploaded by: #{galleryData.author}
+    p Description: #{galleryData.description}
 
 
