--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -4,10 +4,7 @@ html(lang="en")
    meta(charset="utf-8")
   title Express Gallery
   body
-    img(src=url)
-    p Uploaded by: #{author}
-    p= description
-
+    p New photo
 
     form(name="input", action="/gallery", method="get")
       p Author
