I have finished and I am prepared to move to the next step in life.

--- a/views/singlegallery.pug
+++ b/views/singlegallery.pug
@@ -16,6 +16,6 @@ body
     button(type="submit") Delete
 script.
   function editRedirect(){
-    window.location="#{gallery.id}/edit"}
+    window.location="/gallery/#{gallery.id}/edit"}
   //- function deleteRedirect(){
   //-   window.location="#{gallery.id}/delete"}
