--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ head
 body
   header
   h1 Welcome to the gallery!
-  each galleryData in galleries
+  each galleryData in Gallery
     img(src = galleryData.url)
     p Uploaded by: #{galleryData.author}
     p Description: #{galleryData.description}
