--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
           p(class="headerP") Welcome to our online portfolio, we are small group of passionate designers and architects, looking to change and create amazing digital images to inspire others to follow in our innovative steps. Free Architect WordPress Theme
       div(class="mainImg")
         img(src=Gallery[1].url)
-      hr
+      hr(class="line")
          //- - var i = 0
       div(class="row2")
         -var pics = 0
@@ -24,7 +24,7 @@ html(lang="en")
             p #{Gallery[pics].author}
             p #{Gallery[pics].description}
             -pics++
-        hr
+        hr(class="line")
         -var i = 5
         while i < Gallery.length
           div
@@ -32,7 +32,7 @@ html(lang="en")
             p #{Gallery[i].author}
             p #{Gallery[i].description}
             -i++
-        hr
+        hr(class="line")
 
     //-     div=img(src=Gallery[i].url)
     //- each galleryData in Gallery
