fixed pug file for edit url

--- a/views/editgallery.pug
+++ b/views/editgallery.pug
@@ -10,7 +10,7 @@ body
     p Author
     input(type="Text", name="author" value=gallery.author)
     p URL
-    input(type="Text", name="link" value=gallery.url)
+    input(type="Text", name="url" value=gallery.url)
     p Description
     input(type="TextArea", name="description" value=gallery.description)
     p
