--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -32,18 +32,28 @@ body {
     border: 0;
     border-bottom: 1px dotted #ccc;
     background: #999;
+    margin-top: 7%;
+  }
+  .topBar{
+    float: left;
+    width: 100%;
+    margin-bottom: 80px;
   }
   .headerDiv {
     font-family: $arial-font;
-    font-size: 40px;
+    font-size: 50px;
     font-weight: bold;
     float: left;
+    margin-left: 10%;
+    margin-right: 10px;
   }
   .headerPDiv{
     font-family: $arial-font;
     font-size: 12px;
     float: left;
     width: 350px;
+    margin-right: 10%;
+    padding-left: 10px;
     border-left: 1px grey;
     border-style: solid;
   }
