--- a/views/index.pug
+++ b/views/index.pug
@@ -13,14 +13,16 @@ html(lang="en")
         div(class="headerPDiv")
           p(class="headerP") Welcome to our online portfolio, we are small group of passionate designers and architects, looking to change and create amazing digital images to inspire others to follow in our innovative steps. Free Architect WordPress Theme
       div(class="mainImg")
-        img(src=Gallery[1].url)
+        a(href="gallery/" + Gallery[0].id)
+          img(src=Gallery[0].url)
       hr(class="line")
          //- - var i = 0
       div(class="row2")
-        -var pics = 0
+        -var pics = 1
         while pics < 4
           div
-            img(src=Gallery[pics].url)
+            a(href="gallery/" + Gallery[pics].id)
+              img(src=Gallery[pics].url)
             p #{Gallery[pics].author}
             p #{Gallery[pics].description}
             -pics++
@@ -28,7 +30,8 @@ html(lang="en")
         -var i = 5
         while i < Gallery.length
           div
-            img(src=Gallery[i].url)
+            a(href="gallery/" + Gallery[i].id)
+              img(src=Gallery[i].url)
             p #{Gallery[i].author}
             p #{Gallery[i].description}
             -i++
