--- a/views/index.pug
+++ b/views/index.pug
@@ -19,32 +19,13 @@ html(lang="en")
          //- - var i = 0
       div(class="row2")
         -var pics = 1
-        while pics < 4
+        while pics < Gallery.length
           div
+            span= pics%3
             a(href="gallery/" + Gallery[pics].id)
               img(src=Gallery[pics].url)
             p #{Gallery[pics].author}
             p #{Gallery[pics].description}
-            -pics++
-        hr(class="line")
-        -var i = 5
-        while i < Gallery.length
-          div
-            a(href="gallery/" + Gallery[i].id)
-              img(src=Gallery[i].url)
-            p #{Gallery[i].author}
-            p #{Gallery[i].description}
-            -i++
-        hr(class="line")
-
-    //-     div=img(src=Gallery[i].url)
-    //- each galleryData in Gallery
-      //- a(href=/gallery + gallery.id)
-        img(src=galleryData.url)
-      //- img(src = Gallery.url)
-      //- p Uploaded by: #{galleryData.author}
-      //- p Description: #{galleryData.description}
-
-//- script.
-//-   function redirect(){
-//-     window.location="/gallery/" + gallery.id}
+          if pics%3 === 0
+            hr(class="line")
+          -pics++
