--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,58 +9,87 @@ $large: "(min-width: 900px)";
 
 $arial-font: Arial, Helvetica, sans-serif;
 
-@mixin small{
-  @media #{$small} {
-    @content;
+// @mixin small{
+//   @media #{$small} {
+//     body{
+//       .headerDiv{
+//         font-family: $arial-font;
+//         font-size: 50px;
+//         font-weight: bold;
+//       }
+//       .headerPDiv{
+//         display: none;
+//       }
+//     }
+//   }
+//     // @content;
+// }
+
+// @mixin medium{
+//   @media #{$medium} {
+//     // @content;
+//   }
+// }
+
+// @mixin large{
+//   @media #{$large} {
+
+//     // @content;
+//   }
+// }
+
+@media #{$small}{
+  body{
+    .topBar{
+      margin-bottom: 50px;
+    }
+    .headerDiv{
+      font-family: $arial-font;
+      font-size: 50px;
+      font-weight: bold;
+      text-align: center;
+    }
+    .headerPDiv{
+      display: none;
+    }
   }
 }
 
-@mixin medium{
-  @media #{$medium} {
-    @content;
+@media #{$large}{
+  body {
+        hr.dotted {
+        border: 0;
+        border-bottom: 1px dotted #ccc;
+        background: #999;
+        margin-top: 7%;
+      }
+      .topBar{
+        float: left;
+        width: 100%;
+        margin-bottom: 80px;
+      }
+      .headerDiv {
+        font-family: $arial-font;
+        font-size: 50px;
+        font-weight: bold;
+        float: left;
+        margin-left: 10%;
+        margin-right: 10px;
+      }
+      .headerPDiv{
+        font-family: $arial-font;
+        font-size: 12px;
+        float: left;
+        width: 350px;
+        margin-right: 10%;
+        padding-left: 10px;
+        border-left: 1px grey;
+        border-style: solid;
+      }
+      hr.line {
+        border: 0;
+        height: 1px;
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+      }
   }
-}
-
-@mixin large{
-  @media #{$large} {
-    @content;
-  }
-}
-
-body {
-  hr.dotted {
-    border: 0;
-    border-bottom: 1px dotted #ccc;
-    background: #999;
-    margin-top: 7%;
-  }
-  .topBar{
-    float: left;
-    width: 100%;
-    margin-bottom: 80px;
-  }
-  .headerDiv {
-    font-family: $arial-font;
-    font-size: 50px;
-    font-weight: bold;
-    float: left;
-    margin-left: 10%;
-    margin-right: 10px;
-  }
-  .headerPDiv{
-    font-family: $arial-font;
-    font-size: 12px;
-    float: left;
-    width: 350px;
-    margin-right: 10%;
-    padding-left: 10px;
-    border-left: 1px grey;
-    border-style: solid;
-  }
-  hr.line {
-    border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-  }
-
 }
