--- a/views/login.pug
+++ b/views/login.pug
@@ -8,3 +8,4 @@ html(lang="en")
       input(type="text" name="username" placeholder="Username")
       input(type="password" name="password" placeholder="Password")
       input(type="submit" value="Submit")
+    p Username and Password are case sensitive.
