--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -73,6 +73,27 @@ table {
     font-weight: bold;
     text-align: center; }
   body .headerPDiv {
+    display: none; }
+  body .mainImg {
+    align-items: center;
+    margin: 25px;
+    text-align: center; }
+  body img.mainImage {
+    max-height: 90%;
+    max-width: 90%;
+    box-sizing: border-box;
+    align-items: center; }
+  body .row2 {
+    align-items: center;
+    text-align: center;
+    margin: 25px; }
+  body .rowPics {
+    margin-bottom: 30px; }
+  body .picPara {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left; }
+  body p.descriptP {
     display: none; } }
 
 @media (min-width: 900px) {
