--- a/views/singlegallery.pug
+++ b/views/singlegallery.pug
@@ -4,6 +4,9 @@ head
   meta(charset="utf-8")
   title Express Gallery
 body
+  div(class="topBar")
+    div(class="headerDiv")
+      h1(class="header1") _ARCHITEKT
   img(src = gallery.url)
   p Uploaded by: #{gallery.author}
   p Description: #{gallery.description}
