--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -89,10 +89,14 @@ table {
     margin: 25px; }
   body .rowPics {
     margin-bottom: 30px; }
+  body img.uploadedImg {
+    max-height: 90%;
+    max-width: 90%; }
   body .picPara {
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: left; }
+    text-align: left;
+    margin-left: 16px; }
   body p.descriptP {
     display: none; } }
 
@@ -126,3 +130,13 @@ table {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.75), transparent); } }
+
+body {
+  color: gray; }
+  body .topBar {
+    margin-bottom: 50px; }
+  body .headerDiv {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center; }
