--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -71,10 +71,15 @@ $arial-font: Arial, Helvetica, sans-serif;
     .rowPics{
       margin-bottom: 30px;
     }
+    img.uploadedImg{
+      max-height: 90%;
+      max-width: 90%;
+    }
     .picPara{
       font-size: 14px;
       font-family: $arial-font;
       text-align: left;
+      margin-left: 16px;
 
     }
     p.descriptP{
@@ -120,4 +125,18 @@ $arial-font: Arial, Helvetica, sans-serif;
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
       }
   }
+}
+
+body{
+  color: gray;
+    .topBar{
+      margin-bottom: 50px;
+    }
+    .headerDiv{
+      font-family: $arial-font;
+      font-size: 50px;
+      font-weight: bold;
+      text-align: center;
+    }
+
 }
