--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -66,18 +66,12 @@ table {
 
 @media (min-width: 100px) and (max-width: 600px) {
   body .topBar {
-    margin-bottom: 50px; }
+    margin-bottom: 40px; }
   body .headerDiv {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
-    font-weight: bold;
-    text-align: center; }
+    font-weight: bold; }
   body .headerPDiv {
     display: none; }
-  body .mainImg {
-    align-items: center;
-    margin: 25px;
-    text-align: center; }
   body img.mainImage {
     max-height: 90%;
     max-width: 90%;
@@ -94,11 +88,21 @@ table {
     max-width: 90%; }
   body .picPara {
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: left;
     margin-left: 16px; }
   body p.descriptP {
-    display: none; } }
+    display: none; }
+  body .titleDiv {
+    box-sizing: border-box;
+    margin-bottom: 12px;
+    padding: 5px; }
+  body .imgContent {
+    margin-left: 50px; }
+    body .imgContent .descriptDiv {
+      box-sizing: border-box;
+      padding: 5px;
+      margin-top: 20px;
+      font-size: 12px; } }
 
 @media (min-width: 900px) {
   body hr.dotted {
@@ -111,14 +115,12 @@ table {
     width: 100%;
     margin-bottom: 80px; }
   body .headerDiv {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     font-weight: bold;
     float: left;
     margin-left: 10%;
     margin-right: 10px; }
   body .headerPDiv {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     float: left;
     width: 350px;
@@ -126,17 +128,32 @@ table {
     padding-left: 10px;
     border-left: 1px grey;
     border-style: solid; }
+  body .row2 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between; }
+  body .rowPics {
+    box-sizing: border-box;
+    max-width: 300px; } }
+
+body {
+  color: gray;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left; }
   body hr.line {
     border: 0;
     height: 1px;
-    background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.75), transparent); } }
-
-body {
-  color: gray; }
+    background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.75), transparent); }
   body .topBar {
-    margin-bottom: 50px; }
+    margin-bottom: 50px;
+    margin-top: 45px; }
   body .headerDiv {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     font-weight: bold;
     text-align: center; }
+  body .mainImg {
+    align-items: center;
+    margin: 25px;
+    text-align: center;
+    max-height: 100%;
+    max-width: 100%; }
